--- a/Thesis main.tex
+++ b/Thesis main.tex
@@ -1,27 +1,27 @@
 \documentclass[12pt,oneside]{book}
 \usepackage[T1]{fontenc}
 \usepackage{geometry}
-\usepackage{epsfig}
+% \usepackage{epsfig}
 \geometry{verbose,a4paper,tmargin=35mm,bmargin=35mm,lmargin=25mm,rmargin=25mm}
 \usepackage{graphics}
 \usepackage{setspace}
-\usepackage{amsmath}
+% \usepackage{amsmath}
 \usepackage{enumerate}
-\usepackage{amssymb}
+% \usepackage{amssymb}
 \usepackage{adjustbox}
 \usepackage{color}
 \usepackage{array}
 \usepackage{booktabs}
-\usepackage{graphicx}
-\usepackage{pdflscape}
+% \usepackage{graphicx}
+% \usepackage{pdflscape}
 \usepackage{multirow}
-\usepackage{multicol}
-\usepackage[table,xcdraw]{xcolor}
+% \usepackage{multicol}
+% \usepackage[table,xcdraw]{xcolor}
 \usepackage{tabularray}
-\usepackage[utf8x]{inputenc} 
+% \usepackage[utf8x]{inputenc} 
 \setcounter{secnumdepth}{5}
 \setcounter{tocdepth}{5}
- \usepackage{pdflscape}
+%  \usepackage{pdflscape}
  \usepackage{longtable}
 \usepackage{txfonts}
 
@@ -39,10 +39,8 @@
 \input{titlepage}
 \tableofcontents
 \addcontentsline{toc}{chapter}{LIST OF TABLES}
-\listoftables
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\setcounter{page}{1}
-\pagenumbering{gobble}
+ \pagenumbering{roman}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\input{abs}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
