--- a/ch1.tex
+++ b/ch1.tex
@@ -1,4 +1,7 @@
-\chapter{Payment Gateway Analysis}
+
+
+\chapter{Payment Gateway Analysis}\pagenumbering{arabic}
+\setcounter{page}{1}
 \section{Introduction}
 \subsection*{Theoretical Analysis}
 \begin{enumerate}
