--- a/ch2.tex
+++ b/ch2.tex
@@ -36,7 +36,33 @@ REITs (Real Estate Investment Trusts) & Med & Med to High & FTSE Nareit, MSCI & 
 Peer-to-Peer Lending & High & High & LendingClub, Prosper & LendingClub, Prosper\\
 Art and Collectibles & Med & Med to High & Sotheby's, Christie's & Leonardo da Vinci, Picasso
 \end{longtblr}
-\newpage
+
+
+\section{Key Insights from Survey}
+
+\begin{enumerate}
+  \item \textbf{Age and Education Level Distribution:} The majority of survey participants fall into the age group of 26-35 (40\%), followed by the age group of 18-25 (30\%). The education level is relatively high, with 55\% holding a Bachelor's degree and 30\% having a Master's degree or above. This indicates that the survey captures a well-educated and diverse group of participants.
+  
+  \item \textbf{Investment Experience:} The survey participants have varying levels of investment experience, with the majority (65\%) having 1-10 years of experience. It's interesting to note that 10\% of respondents have less than one year of investment experience, showing a presence of new and inexperienced investors in the sample.
+  
+  \item \textbf{Types of Investments Made:} Stocks are the most popular investment choice among participants, with 70\% investing in them, followed by bonds (45\%) and mutual funds (55\%). Cryptocurrencies also seem to be gaining popularity, with 25\% of participants investing in them.
+  
+  \item \textbf{Risk Tolerance:} The survey reveals that 40\% of participants consider themselves to be moderate risk-takers (scoring 3 on a scale of 1 to 5). Additionally, there is a significant portion (25\%) of risk-averse investors (scoring 2), and only a small percentage (5\%) are classified as very risk-takers (scoring 5). This shows a diverse range of risk tolerance levels among the respondents.
+  
+  \item \textbf{Decision-Making Style:} The majority of participants (40\%) describe their decision-making style as analytical, followed by intuitive (30\%) and impulsive (15\%). This indicates that a significant portion of investors base their decisions on thorough analysis and research.
+  
+  \item \textbf{Sources of Investment Information:} Financial news websites and financial advisors are the top sources of investment information, with 60\% and 45\% of participants using them, respectively. Social media (35\%) and family and friends (20\%) also play a role in influencing investment decisions.
+  
+  \item \textbf{Investment Goals:} Capital appreciation is the most common investment goal among respondents, with 65\% choosing it. Wealth preservation (50\%) and retirement planning (40\%) are also important objectives for the participants.
+  
+  \item \textbf{Preferred Investment Duration:} Medium-term investments (3-10 years) are the most preferred among the participants, with 50\% choosing this duration. Long-term investments (10+ years) are favored by 35\% of respondents.
+  
+  \item \textbf{Factors Influencing Investment Decisions:} Historical performance is the most crucial factor influencing investment decisions, with 70\% of participants considering it. The risk-reward ratio (60\%) and expert recommendations (40\%) also play significant roles in decision-making.
+\end{enumerate}
+
+Overall, the survey provides valuable insights into the diverse preferences and decision-making patterns of investors. It highlights the importance of considering risk tolerance, investment goals, and decision-making styles when providing investment advice or designing financial products tailored to different segments of investors. Additionally, the survey shows the increasing popularity of certain investment options, such as cryptocurrencies, and the influence of various sources of information in shaping investment decisions.
+
+% \newpage
 \section{Investment Portfolios}
 
 To design investment portfolios for individuals with varying annual earnings, we'll consider a range of portfolio options based on different risk profiles and investment goals. It's important to note that the allocation percentages provided are general guidelines and should be adjusted based on individual risk tolerance, investment knowledge, and time horizon. Here are six portfolio options across different earning classes:
